--- a/contacto.html
+++ b/contacto.html
@@ -67,48 +67,55 @@
             </form>
         </div>
     </section>
+    <div class="mapa-responsive">
+        <iframe 
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d243.80718824048287!2d-76.99843134731056!3d-12.117967371664085!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9105c7d923b681c5%3A0xc97ac6ced1e9ca99!2sLubricentro%20S.L!5e0!3m2!1ses!2spe!4v1766870005842!5m2!1ses!2spe"
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+            allowfullscreen>
+        </iframe>
+    </div>
     <footer>
         <div class="footer-content">
             <div class="footer-main">
                 <div class="footer-section">
-                    <h2>EcoTechServices</h2>
-                    <p>Soluciones en saneamiento ambiental con responsabilidad y confianza.</p>
-                    <div class="contact-info">
-                        <span><i class='bx bxs-phone'></i>+51 949197827</span>
-                    </div>
+                    <h2>EcoTech</h2>
+                    <p>Fumigación | Gasfitería | Electricidad | Limpieza</p>
                     <h3 style="margin-top: 15px">Redes Sociales</h3>
                     <div class="social-links">
-                        <a href="https://www.instagram.com/ecotechfumigaciones?igsh=bDRnMXdmaHNib3d2" title="Instagram"><i class='bx bxl-instagram-alt' ></i></a>
-                        <a href="https://www.facebook.com/share/17VEhwxiuB/" title="Facebook"><i class='bx bxl-facebook' ></i></a>
-                        <a href="http://tiktok.com/@fumigacion.gasfiteria" title="Tiktok"><i class="ri-tiktok-fill"></i></a>
+                        <a href="#" title="Instagram"><i class='bx bxl-instagram-alt' ></i></a>
+                        <a href="#" title="Facebook"><i class='bx bxl-facebook' ></i></a>
+                        <a href="#" title="Tiktok"><i class="ri-tiktok-fill"></i></a>
                     </div>
                 </div>
-                <div class="footer-section">
-                    <h3>Enlace rápido</h3>
-                    <a href="#inicio">Inicio</a>
-                    <a href="#nosotros">Nosotros</a>
-                    <a href="#contacto">Contacto</a>
-                    <a href="#servicios">Servicios</a>
-                </div>
-                <div class="footer-section">
-                    <h3>Contacto</h3>
-                    <p>Calle. Nevado Sara Sara Nro. 115, San Miguel - Lima</p>
-                    <div class="contact-info">
-                        <span><i class='bx bxs-phone'></i>+51 922776631</span>
+                <div class="footer-down">
+                    <div class="footer-section">
+                        <h3>Enlace rápido</h3>
+                        <a href="#inicio">Inicio</a>
+                        <a href="#nosotros">Nosotros</a>
+                        <a href="#contacto">Contacto</a>
+                        <a href="#servicios">Servicios</a>
                     </div>
-                    <div class="contact-info">
-                        <span><i class='bx bxs-phone'></i>01 621-7996</span>
+                    <div class="footer-section">
+                        <h3>Contacto</h3>
+                        <p>Calle. Nevado Sara Sara Nro. 115, San Miguel - Lima</p>
+                        <div class="contact-info">
+                            <span><i class='bx bxs-phone'></i>+51 922776631 / +51 929421056</span>
+                        </div>
+                        <div class="contact-info">
+                            <span><i class='bx bxs-phone'></i>01 621-7996</span>
+                        </div>
+                        <div class="contact-info">
+                            <span><i class='bx bxs-envelope' ></i>comercialecotechperu@gmail.com</span>
+                        </div>
+                        <div class="contact-info">
+                            <span><i class='bx bxs-envelope' ></i>comercial2ecotechperu@gmail.com</span>
+                        </div>
+                        <div class="contact-info">
+                            <span><i class='bx bxs-envelope' ></i>operacionesecotecperu@gmail.com</span>
+                        </div>
                     </div>
-                    <div class="contact-info">
-                        <span><i class='bx bxs-envelope' ></i>comercialecotechperu@gmail.com</span>
-                    </div>
-                    <div class="contact-info">
-                        <span><i class='bx bxs-envelope' ></i>comercial2ecotechperu@gmail.com</span>
-                    </div>
-                    <div class="contact-info">
-                        <span><i class='bx bxs-envelope' ></i>operacionesecotecperu@gmail.com</span>
-                    </div>
-                </div>                 
+                </div> 
             </div>
         </div>
         <div class="copyright">
