--- a/index.html
+++ b/index.html
@@ -56,12 +56,23 @@
                 </h2>
             </div>
             <div class="hero-contact">
-                <div class="title-hero">
-                    <i class='bx bx-phone-call' ></i>
+                <div class="first-column-bnr">
+                    <div class="title-hero">
+                        <i class='bx bx-phone-call' ></i>
+                    </div>
+                    <div class="inf-hero">
+                        <p>Distribuidor y Proyectos</p>
+                        <p>929-421-056</p>
+                    </div>
                 </div>
-                <div class="inf-hero">
-                    <p>Distribuidor y Proyectos</p>
-                    <p>929-421-056</p>
+                <div class="second-column-bnr">
+                    <div class="title-hero">
+                        <i class='bx bx-phone-call' ></i>
+                    </div>
+                    <div class="inf-hero">
+                        <p>Distribuidor y Proyectos</p>
+                        <p>929-421-056</p>
+                    </div>
                 </div>
             </div>
         </article>
@@ -72,13 +83,53 @@
                 <span>GASFITERÍA<br></span> <strong>PROFESIONAL</strong><br>EXPERTA
                 </h2>
             </div>
+            <div class="hero-contact">
+                <div class="first-column-bnr">
+                    <div class="title-hero">
+                        <i class='bx bx-phone-call' ></i>
+                    </div>
+                    <div class="inf-hero">
+                        <p>Distribuidor y Proyectos</p>
+                        <p>929-421-056</p>
+                    </div>
+                </div>
+                <div class="second-column-bnr">
+                    <div class="title-hero">
+                        <i class='bx bx-phone-call' ></i>
+                    </div>
+                    <div class="inf-hero">
+                        <p>Distribuidor y Proyectos</p>
+                        <p>929-421-056</p>
+                    </div>
+                </div>
+            </div>
         </article>
         <article class="banner-slide">
             <img src="img/banner-3.png" alt="Desinfección profesional" class="banner-img">
             <div class="banner-content">
                 <h2 class="banner-title">
-                <span>MANTENIMIENTO DE<br></span> <strong>LUCES DE</strong><br>EMERGENCIA
+                <span>SERVICIO DE<br></span> <strong>ELECTRICIDAD</strong><br>SEGURA
                 </h2>
+            </div>
+            <div class="hero-contact">
+                <div class="first-column-bnr">
+                    <div class="title-hero">
+                        <i class='bx bx-phone-call' ></i>
+                    </div>
+                    <div class="inf-hero">
+                        <p>Distribuidor y Proyectos</p>
+                        <p>929-421-056</p>
+                    </div>
+                </div>
+                <div class="second-column-bnr">
+                    <div class="title-hero">
+                        <i class='bx bx-phone-call' ></i>
+                    </div>
+                    <div class="inf-hero">
+                        <p>Distribuidor y Proyectos</p>
+                        <p>929-421-056</p>
+                    </div>
+                </div>
             </div>
         </article>
         <article class="banner-slide">
@@ -88,6 +139,26 @@
                 <span>SERVICIO DE<br></span> <strong>FUMIGACIÓN</strong>
                 </h2>
             </div>
+            <div class="hero-contact">
+                <div class="first-column-bnr">
+                    <div class="title-hero">
+                        <i class='bx bx-phone-call' ></i>
+                    </div>
+                    <div class="inf-hero">
+                        <p>Distribuidor y Proyectos</p>
+                        <p>929-421-056</p>
+                    </div>
+                </div>
+                <div class="second-column-bnr">
+                    <div class="title-hero">
+                        <i class='bx bx-phone-call' ></i>
+                    </div>
+                    <div class="inf-hero">
+                        <p>Distribuidor y Proyectos</p>
+                        <p>929-421-056</p>
+                    </div>
+                </div>
+            </div>
         </article>
         <article class="banner-slide">
             <img src="img/banner-4.png" alt="Desinfección profesional" class="banner-img">
@@ -95,6 +166,26 @@
                 <h2 class="banner-title">
                 <span>ALQUILER Y VENTAS<br></span> <strong>DE EQUIPOS</strong><br>DE FUMIGACIÓN
                 </h2>
+            </div>
+            <div class="hero-contact">
+                <div class="first-column-bnr">
+                    <div class="title-hero">
+                        <i class='bx bx-phone-call' ></i>
+                    </div>
+                    <div class="inf-hero">
+                        <p>Distribuidor y Proyectos</p>
+                        <p>929-421-056</p>
+                    </div>
+                </div>
+                <div class="second-column-bnr">
+                    <div class="title-hero">
+                        <i class='bx bx-phone-call' ></i>
+                    </div>
+                    <div class="inf-hero">
+                        <p>Distribuidor y Proyectos</p>
+                        <p>929-421-056</p>
+                    </div>
+                </div>
             </div>
         </article>
         <!-- Botones de control -->
@@ -353,7 +444,7 @@
     <section class="hero-banner" id="contact">
         <div class="overlay"></div>
         <div class="banner-contact">
-            <h2>¡Reserve ahora para una limpieza <br> brillante como nunca antes!</h2>
+            <h2>Atendemos a Nivel Nacional<br><strong>Piura, Trujillos, Lima y Arequipa</strong></h2>
             <a href="contacto.html" class="btn-contact">Contáctanos <i class='bx bx-right-arrow-alt'></i></a>
         </div>
     </section>
@@ -446,39 +537,10 @@
                             <span class="testimonial-date">Enero, 2025</span>
                         </div>
                     </article>
-                    <!-- CARD 2 -->
-                    <article class="testimonial-card">
-                        <div class="quote-icon">
-                            <img src="img/quotes.png" alt="">
-                        </div>
-                        <div class="testimonial-header">
-                            <div class="client-logo"></div>
-                            <div class="client-info">
-                                <h3>Sepcon</h3>
-                                <p>Oficinas de empresa</p>
-                            </div>
-                        </div>
-                        <div class="testimonial-text">
-                            <p>
-                                “Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.”
-                            </p>
-                        </div>
-                        <div class="testimonial-footer">
-                            <div class="stars">
-                                <i class="bx bxs-star"></i>
-                                <i class="bx bxs-star"></i>
-                                <i class="bx bxs-star"></i>
-                                <i class="bx bxs-star"></i>
-                                <i class="bx bxs-star"></i>
-                            </div>
-                            <span class="testimonial-date">Enero, 2025</span>
-                        </div>
-                    </article>
                 </div>
             </div>
         </div>
     </section>
-
     <section class="container-quest">
         <div class="contain-quest">
             <div class="container-inf-quest">
@@ -568,6 +630,22 @@
                 </article>
             </div>
         </div>
+    </section>
+    <section class="banner-franchise">
+        <figure class="img-portada">
+            <div class="inf-bnr">
+                <p><strong>¿Quieres invertir con nosotros?</strong></p>
+                <a href="https://wa.me/51922776631?text=Hola%2C%20deseo%20m%C3%A1s%20informaci%C3%B3n%20sobre%20la%20franquicia"><p>!Únete a una Franquicia Exitosa¡</p></a>
+                <p>Una gran oportunidad para inversones que buscan un negocio de Ingeneria y Saneamiento Ambiental.</p>
+            </div>
+        </figure>
+        <figure class="img-portada-responsive">
+            <div class="inf-bnr">
+                <p><strong>¿Quieres invertir con nosotros?</strong></p>
+                <a href="https://wa.me/51922776631?text=Hola%2C%20deseo%20m%C3%A1s%20informaci%C3%B3n%20sobre%20la%20franquicia"><p>!Únete a una Franquicia Exitosa¡</p></a>
+                <p>Una gran oportunidad para inversones que buscan un negocio de Ingeneria y Saneamiento Ambiental.</p>
+            </div>
+        </figure>
     </section>
     <section class="brands-section">
         <div class="brands-container">
@@ -667,20 +745,16 @@
                 <p class="p-title-nt mb-48">Respaldo oficial que garantiza nuestra calidad y cumplimiento normativo</p>
             </div>
             <div class="cert-containter">
-                <img src="img/cert-01.png" alt="">
                 <img src="img/cert-02.png" alt="">
-                <img src="img/cert-03.png" alt="">
                 <img src="img/cert-04.png" alt="">
-                <img style="height: 20vh;" src="img/cert-05.png" alt="">
-                <img src="img/cert-06.jpg" alt="">
             </div>
     </section>
     <footer>
         <div class="footer-content">
             <div class="footer-main">
                 <div class="footer-section">
-                    <h2>EcoTechServices</h2>
-                    <p>Soluciones en saneamiento ambiental con responsabilidad y confianza.</p>
+                    <h2>EcoTech</h2>
+                    <p>Fumigación | Gasfitería | Electricidad | Limpieza</p>
                     <h3 style="margin-top: 15px">Redes Sociales</h3>
                     <div class="social-links">
                         <a href="#" title="Instagram"><i class='bx bxl-instagram-alt' ></i></a>
@@ -688,32 +762,34 @@
                         <a href="#" title="Tiktok"><i class="ri-tiktok-fill"></i></a>
                     </div>
                 </div>
-                <div class="footer-section">
-                    <h3>Enlace rápido</h3>
-                    <a href="#inicio">Inicio</a>
-                    <a href="#nosotros">Nosotros</a>
-                    <a href="#contacto">Contacto</a>
-                    <a href="#servicios">Servicios</a>
-                </div>
-                <div class="footer-section">
-                    <h3>Contacto</h3>
-                    <p>Calle. Nevado Sara Sara Nro. 115, San Miguel - Lima</p>
-                    <div class="contact-info">
-                        <span><i class='bx bxs-phone'></i>+51 922776631 / +51 929421056</span>
+                <div class="footer-down">
+                    <div class="footer-section">
+                        <h3>Enlace rápido</h3>
+                        <a href="#inicio">Inicio</a>
+                        <a href="#nosotros">Nosotros</a>
+                        <a href="#contacto">Contacto</a>
+                        <a href="#servicios">Servicios</a>
                     </div>
-                    <div class="contact-info">
-                        <span><i class='bx bxs-phone'></i>01 621-7996</span>
+                    <div class="footer-section">
+                        <h3>Contacto</h3>
+                        <p>Calle. Nevado Sara Sara Nro. 115, San Miguel - Lima</p>
+                        <div class="contact-info">
+                            <span><i class='bx bxs-phone'></i>+51 922776631 / +51 929421056</span>
+                        </div>
+                        <div class="contact-info">
+                            <span><i class='bx bxs-phone'></i>01 621-7996</span>
+                        </div>
+                        <div class="contact-info">
+                            <span><i class='bx bxs-envelope' ></i>comercialecotechperu@gmail.com</span>
+                        </div>
+                        <div class="contact-info">
+                            <span><i class='bx bxs-envelope' ></i>comercial2ecotechperu@gmail.com</span>
+                        </div>
+                        <div class="contact-info">
+                            <span><i class='bx bxs-envelope' ></i>operacionesecotecperu@gmail.com</span>
+                        </div>
                     </div>
-                    <div class="contact-info">
-                        <span><i class='bx bxs-envelope' ></i>comercialecotechperu@gmail.com</span>
-                    </div>
-                    <div class="contact-info">
-                        <span><i class='bx bxs-envelope' ></i>comercial2ecotechperu@gmail.com</span>
-                    </div>
-                    <div class="contact-info">
-                        <span><i class='bx bxs-envelope' ></i>operacionesecotecperu@gmail.com</span>
-                    </div>
-                </div>                  
+                </div> 
             </div>
         </div>
         <div class="copyright">
