--- a/servicio.html
+++ b/servicio.html
@@ -164,11 +164,8 @@
         <div class="footer-content">
             <div class="footer-main">
                 <div class="footer-section">
-                    <h2>EcoTechServices</h2>
-                    <p>Soluciones en saneamiento ambiental con responsabilidad y confianza.</p>
-                    <div class="contact-info">
-                        <span><i class='bx bxs-phone'></i>+51 949197827</span>
-                    </div>
+                    <h2>EcoTech</h2>
+                    <p>Fumigación | Gasfitería | Electricidad | Limpieza</p>
                     <h3 style="margin-top: 15px">Redes Sociales</h3>
                     <div class="social-links">
                         <a href="#" title="Instagram"><i class='bx bxl-instagram-alt' ></i></a>
@@ -176,32 +173,34 @@
                         <a href="#" title="Tiktok"><i class="ri-tiktok-fill"></i></a>
                     </div>
                 </div>
-                <div class="footer-section">
-                    <h3>Enlace rápido</h3>
-                    <a href="#inicio">Inicio</a>
-                    <a href="#nosotros">Nosotros</a>
-                    <a href="#contacto">Contacto</a>
-                    <a href="#servicios">Servicios</a>
-                </div>
-                <div class="footer-section">
-                    <h3>Contacto</h3>
-                    <p>Calle. Nevado Sara Sara Nro. 115, San Miguel - Lima</p>
-                    <div class="contact-info">
-                        <span><i class='bx bxs-phone'></i>+51 922776631</span>
+                <div class="footer-down">
+                    <div class="footer-section">
+                        <h3>Enlace rápido</h3>
+                        <a href="#inicio">Inicio</a>
+                        <a href="#nosotros">Nosotros</a>
+                        <a href="#contacto">Contacto</a>
+                        <a href="#servicios">Servicios</a>
                     </div>
-                    <div class="contact-info">
-                        <span><i class='bx bxs-phone'></i>01 621-7996</span>
+                    <div class="footer-section">
+                        <h3>Contacto</h3>
+                        <p>Calle. Nevado Sara Sara Nro. 115, San Miguel - Lima</p>
+                        <div class="contact-info">
+                            <span><i class='bx bxs-phone'></i>+51 922776631 / +51 929421056</span>
+                        </div>
+                        <div class="contact-info">
+                            <span><i class='bx bxs-phone'></i>01 621-7996</span>
+                        </div>
+                        <div class="contact-info">
+                            <span><i class='bx bxs-envelope' ></i>comercialecotechperu@gmail.com</span>
+                        </div>
+                        <div class="contact-info">
+                            <span><i class='bx bxs-envelope' ></i>comercial2ecotechperu@gmail.com</span>
+                        </div>
+                        <div class="contact-info">
+                            <span><i class='bx bxs-envelope' ></i>operacionesecotecperu@gmail.com</span>
+                        </div>
                     </div>
-                    <div class="contact-info">
-                        <span><i class='bx bxs-envelope' ></i>comercialecotechperu@gmail.com</span>
-                    </div>
-                    <div class="contact-info">
-                        <span><i class='bx bxs-envelope' ></i>comercial2ecotechperu@gmail.com</span>
-                    </div>
-                    <div class="contact-info">
-                        <span><i class='bx bxs-envelope' ></i>operacionesecotecperu@gmail.com</span>
-                    </div>
-                </div>                  
+                </div> 
             </div>
         </div>
         <div class="copyright">
