--- a/index.html
+++ b/index.html
@@ -646,6 +646,13 @@
                 <p>Una gran oportunidad para inversones que buscan un negocio de Ingeneria y Saneamiento Ambiental.</p>
             </div>
         </figure>
+        <figure class="img-portada-tablet">
+            <div class="inf-bnr">
+                <p><strong>¿Quieres invertir con nosotros?</strong></p>
+                <a href="https://wa.me/51922776631?text=Hola%2C%20deseo%20m%C3%A1s%20informaci%C3%B3n%20sobre%20la%20franquicia"><p>!Únete a una Franquicia Exitosa¡</p></a>
+                <p>Una gran oportunidad para inversones que buscan un negocio de Ingeneria y Saneamiento Ambiental.</p>
+            </div>
+        </figure>
     </section>
     <section class="brands-section">
         <div class="brands-container">
