avance de proyecto de Saneamiento Ambiental

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                         <i class="ri-shield-check-line"></i>
                     </div>
                     <div class="sect-inf">
-                        <h3>Seguridad<br>Vial</h3>
+                        <h3>Fumigación de<br>Ambientes</h3>
                     </div>
                 </article>
                 <!-- CARD 2 -->
@@ -351,7 +351,7 @@
                         <i class="ri-signpost-line"></i>
                     </div>
                     <div class="sect-inf">
-                        <h3>Señalización<br>Vertical</h3>
+                        <h3>Desratización</h3>
                     </div>
                 </article>
                 <!-- CARD 3 -->
@@ -360,7 +360,7 @@
                         <i class="ri-arrow-up-down-fill"></i>
                     </div>
                     <div class="sect-inf">
-                        <h3>Señalización<br>Horizontal</h3>
+                        <h3>Desinfección</h3>
                     </div>
                 </article>
                 <!-- CARD 4 -->
@@ -369,7 +369,7 @@
                         <i class='bx bx-align-middle'></i>
                     </div>
                     <div class="sect-inf">
-                        <h3>Barreras<br>de Seguridad</h3>
+                        <h3>Gasfiteria</h3>
                     </div>
                 </article>
                 <!-- CARD 5 -->
@@ -378,7 +378,7 @@
                         <i class="ri-skip-forward-line"></i>
                     </div>
                     <div class="sect-inf">
-                        <h3>Amortiguadores<br>de impacto</h3>
+                        <h3>Limpieza de tanques<br>y cisternas</h3>
                     </div>
                 </article>
                 <!-- CARD 6 -->
@@ -387,7 +387,7 @@
                         <i class="ri-ram-2-line"></i>
                     </div>
                     <div class="sect-inf">
-                        <h3>Terminales<br>atenuadores</h3>
+                        <h3>Limpieza de<br>Fachadas y Lunas</h3>
                     </div>
                 </article>
                 <!-- CARD 7 -->
@@ -396,7 +396,7 @@
                         <i class="ri-settings-5-fill"></i>
                     </div>
                     <div class="sect-inf">
-                        <h3>Amortiguadores<br>sobre Camión</h3>
+                        <h3>Limpieza<br>de Banner</h3>
                     </div>
                 </article>
                 <!-- CARD 8 -->
@@ -405,34 +405,7 @@
                         <i class="ri-checkbox-circle-line"></i>
                     </div>
                     <div class="sect-inf">
-                        <h3>Sellos de<br>alta fricción</h3>
-                    </div>
-                </article>
-                <!-- CARD 9 -->
-                <article class="sect-cards">
-                    <div class="sect-icon">
-                        <i class="ri-loader-2-fill"></i>
-                    </div>
-                    <div class="sect-inf">
-                        <h3>ITS</h3>
-                    </div>
-                </article>
-                <!-- CARD 10 -->
-                <article class="sect-cards">
-                    <div class="sect-icon">
-                        <i class="ri-pulse-line"></i>
-                    </div>
-                    <div class="sect-inf">
-                        <h3>Medición de Niveles<br>de Servicio</h3>
-                    </div>
-                </article>
-                <!-- CARD 11 -->
-                <article class="sect-cards">
-                    <div class="sect-icon">
-                        <i class="ri-truck-line"></i>
-                    </div>
-                    <div class="sect-inf">
-                        <h3>Alquiler de Vehículos<br>de contección</h3>
+                        <h3>Servicio<br>General</h3>
                     </div>
                 </article>
             </div>
@@ -444,7 +417,7 @@
     <section class="hero-banner" id="contact">
         <div class="overlay"></div>
         <div class="banner-contact">
-            <h2>Atendemos a Nivel Nacional<br><strong>Piura, Trujillos, Lima y Arequipa</strong></h2>
+            <h2>En todo el Perú hacemos servicios a Nivel Nacional<br><strong>Piura, Trujillos, Lima y Arequipa</strong></h2>
             <a href="contacto.html" class="btn-contact">Contáctanos <i class='bx bx-right-arrow-alt'></i></a>
         </div>
     </section>
@@ -553,7 +526,7 @@
                         <i class="ri-fullscreen-exit-line"></i>
                     </div>
                     <div class="sect-inf">
-                        <h3>Pintura Adquídica<br>(Caucho Clorado)</h3>
+                        <h3>Trampas<br>pegantes</h3>
                     </div>
                 </article>
                 <!-- CARD 2 -->
@@ -562,7 +535,7 @@
                         <i class="ri-error-warning-line"></i>
                     </div>
                     <div class="sect-inf">
-                        <h3>Termoplástico<br>en Caliente</h3>
+                        <h3>Equipos<br>de Fumigación</h3>
                     </div>
                 </article>
                 <!-- CARD 3 -->
@@ -571,7 +544,7 @@
                         <i class="ri-eye-line"></i>
                     </div>
                     <div class="sect-inf">
-                        <h3>Microesferas<br>de Vidrio</h3>
+                        <h3>Desinfectantes</h3>
                     </div>
                 </article>
                 <!-- CARD 4 -->
@@ -580,7 +553,7 @@
                         <i class="ri-arrow-left-right-fill"></i>
                     </div>
                     <div class="sect-inf">
-                        <h3>Pintura Acrilica<br>Base Solvente</h3>
+                        <h3>Insecticidas</h3>
                     </div>
                 </article>
                 <!-- CARD 5 -->
@@ -589,7 +562,7 @@
                         <i class="ri-rewind-line"></i>
                     </div>
                     <div class="sect-inf">
-                        <h3>Plásticos en Frío - <br>dos Componentes</h3>
+                        <h3>Rodenticidas</h3>
                     </div>
                 </article>
                 <!-- CARD 6 -->
@@ -598,7 +571,7 @@
                         <i class="ri-arrow-up-double-line"></i>
                     </div>
                     <div class="sect-inf">
-                        <h3>Tachas<br>Retroreflectivas</h3>
+                        <h3>Tubos<br>y Trampas</h3>
                     </div>
                 </article>
                 <!-- CARD 7 -->
@@ -607,7 +580,7 @@
                         <i class="ri-drop-line"></i>
                     </div>
                     <div class="sect-inf">
-                        <h3>Pintura Acrílica<br>Emulsionada en Agua</h3>
+                        <h3>Jaulas</h3>
                     </div>
                 </article>
                 <!-- CARD 8 -->
@@ -616,7 +589,7 @@
                         <i class="ri-edit-line"></i>
                     </div>
                     <div class="sect-inf">
-                        <h3>Plástica<br>Preformado</h3>
+                        <h3>Capturadores<br>de Insectos</h3>
                     </div>
                 </article>
                 <!-- CARD 9 -->
@@ -625,7 +598,7 @@
                         <i class="ri-checkbox-circle-line"></i>
                     </div>
                     <div class="sect-inf">
-                        <h3>Laminas para<br> Señalización vial</h3>
+                        <h3>Epps</h3>
                     </div>
                 </article>
             </div>
