proyecto casi terminado

--- a/servicio.html
+++ b/servicio.html
@@ -11,13 +11,13 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css" rel="stylesheet" />
 
     <!--=============== SWIPER CSS ===============-->
-        <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <!-- ============== HEADER ============== -->
     <header class="header" id="header">
         <nav class="nav container">
-            <a href="#home" class="nav__logo">
+            <a href="index.html" class="nav__logo">
                 <img src="img/Logo-Ecotech.png" alt="image" />
             </a>
             <div class="nav__menu" id="nav-menu">
@@ -191,18 +191,18 @@
                     <p>Fumigación | Gasfitería | Electricidad | Limpieza</p>
                     <h3 style="margin-top: 15px">Redes Sociales</h3>
                     <div class="social-links">
-                        <a href="#" title="Instagram"><i class='bx bxl-instagram-alt' ></i></a>
-                        <a href="#" title="Facebook"><i class='bx bxl-facebook' ></i></a>
-                        <a href="#" title="Tiktok"><i class="ri-tiktok-fill"></i></a>
+                        <a href="https://www.instagram.com/ecotechfumigaciones?igsh=bDRnMXdmaHNib3d2" title="Instagram" target="_blank"><i class='bx bxl-instagram-alt'></i></a>
+                        <a href="https://www.facebook.com/share/17VEhwxiuB/" title="Facebook" target="_blank"><i class='bx bxl-facebook'></i></a>
+                        <a href="https://www.tiktok.com/@fumigacion.gasfiteria" title="Tiktok" target="_blank"><i class="ri-tiktok-fill"></i></a>
                     </div>
                 </div>
                 <div class="footer-down">
                     <div class="footer-section">
                         <h3>Enlace rápido</h3>
-                        <a href="#inicio">Inicio</a>
-                        <a href="#nosotros">Nosotros</a>
-                        <a href="#contacto">Contacto</a>
-                        <a href="#servicios">Servicios</a>
+                        <a href="index.html">Inicio</a>
+                        <a href="nosotros.html">Nosotros</a>
+                        <a href="servicio.html">Servicios</a>
+                        <a href="contacto.html">Contacto</a>
                     </div>
                     <div class="footer-section">
                         <h3>Contacto</h3>
